fix: replace catalogue terminology with e-commerce (فروشگاه آنلاین) across all pages

--- a/architecture.html
+++ b/architecture.html
@@ -135,7 +135,7 @@
 
             <rect x="530" y="160" width="200" height="60" rx="5" fill="none" stroke="#2C5282" stroke-width="1.5"/>
             <text x="630" y="188" text-anchor="middle" fill="#D0CFC8" font-size="11" font-weight="500" font-family="Vazirmatn">وب‌سایت عمومی</text>
-            <text x="630" y="206" text-anchor="middle" fill="#8A8A88" font-size="9" font-family="Vazirmatn">کاتالوگ، فیلتر، جستجو</text>
+            <text x="630" y="206" text-anchor="middle" fill="#8A8A88" font-size="9" font-family="Vazirmatn">فروشگاه، فیلتر، جستجو</text>
 
             <!-- Bottom row — mirrored: CRM left, Database right -->
             <rect x="160" y="250" width="200" height="50" rx="5" fill="none" stroke="#2C5282" stroke-width="1.5" stroke-dasharray="6 3"/>
@@ -230,7 +230,7 @@
 
             <rect x="615" y="135" width="145" height="50" rx="4" fill="none" stroke="#6B7280" stroke-width="1.5"/>
             <text x="687" y="158" text-anchor="middle" fill="#D0CFC8" font-size="10" font-weight="500" font-family="Vazirmatn">وب‌سایت عمومی</text>
-            <text x="687" y="174" text-anchor="middle" fill="#8A8A88" font-size="8" font-family="Vazirmatn">کاتالوگ، جستجو، مقایسه</text>
+            <text x="687" y="174" text-anchor="middle" fill="#8A8A88" font-size="8" font-family="Vazirmatn">فروشگاه، جستجو، مقایسه</text>
 
             <!-- Row 2: Shared API (stays centered) -->
             <rect x="120" y="215" width="560" height="50" rx="4" fill="none" stroke="#A89A82" stroke-width="1.5"/>
