--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>پیشنهاد پلتفرم وب — تجهیزات IT، زیرساخت شبکه و دوربین مداربسته</title>
-  <meta name="description" content="پیشنهاد ساختاریافته برای ساخت پلتفرم وب مقیاس‌پذیر جهت مدیریت کاتالوگ تجهیزات IT، زیرساخت شبکه و سیستم‌های دوربین مداربسته.">
+  <meta name="description" content="پیشنهاد ساختاریافته برای ساخت فروشگاه آنلاین مقیاس‌پذیر جهت فروش تجهیزات IT، زیرساخت شبکه و سیستم‌های دوربین مداربسته.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -42,9 +42,9 @@
     <div class="container container--narrow">
       <div data-animate>
         <span class="section__label">پیشنهاد</span>
-        <h1>پلتفرم وب برای کاتالوگ محصولات شما</h1>
+        <h1>فروشگاه آنلاین محصولات شما</h1>
         <p class="lead">
-          مدیریت کاتالوگ رو به رشد تجهیزات IT، زیرساخت شبکه و سیستم‌های دوربین مداربسته
+          مدیریت فروشگاه آنلاین رو به رشد تجهیزات IT، زیرساخت شبکه و سیستم‌های دوربین مداربسته
           به چیزی بیش از یک وب‌سایت ساده نیاز دارد. این سند پنج رویکرد ساختاریافته
           برای ساخت پلتفرم محصول ارائه می‌دهد — از استقرار سریع تا اکوسیستم یکپارچه کامل —
           تا بتوانید مسیری را انتخاب کنید که با نیازهای عملیاتی شما مطابقت داشته باشد.
@@ -82,7 +82,7 @@
           شما سه دسته محصول فنی می‌فروشید: تجهیزات IT (سرور، ورک‌استیشن،
           تجهیزات جانبی)، زیرساخت شبکه (سوییچ، اکسس پوینت، کابل‌کشی، فایروال)
           و سیستم‌های دوربین مداربسته (دوربین، NVR، کنترل دسترسی). هر دسته
-          نیازمندی‌های مشخصات فنی، پروفایل خریدار و نیازهای مدیریت کاتالوگ متفاوتی دارد.
+          نیازمندی‌های مشخصات فنی، پروفایل خریدار و نیازهای مدیریت فروشگاهی متفاوتی دارد.
         </p>
         <p>
           وب‌سایت شما باید هم ابزار کشف محصول برای مشتریان بالقوه باشد و هم
@@ -101,7 +101,7 @@
       <h4 class="mt-l" data-animate>محدودیت‌های شناسایی شده</h4>
       <ul data-animate>
         <li>انتخاب CRM بر دامنه یکپارچه‌سازی تأثیر می‌گذارد — این پیشنهاد گزینه‌ها را تعریف می‌کند، نه فرضیات</li>
-        <li>کیفیت داده‌های محصول مستقیماً بر زمان‌بندی راه‌اندازی و کاربردپذیری کاتالوگ تأثیر دارد</li>
+        <li>کیفیت داده‌های محصول مستقیماً بر زمان‌بندی راه‌اندازی و کاربردپذیری فروشگاه تأثیر دارد</li>
         <li>نگهداری مستمر است، نه هزینه یک‌باره — هر پکیج پروفایل نگهداری متفاوتی دارد</li>
         <li>هیچ راه‌حلی به‌طور جهانی برتر نیست؛ هر کدام مصالحه‌های خاصی دارد که در این پیشنهاد مستند شده</li>
       </ul>
@@ -123,7 +123,7 @@
           <div class="card__letter">A</div>
           <h5 class="card__title">وردپرس + قالب آماده</h5>
           <p class="card__subtitle">استقرار سریع &middot; ۳,۵۰۰ درهم</p>
-          <p class="card__body">حضور وب حرفه‌ای در ۲ تا ۳ هفته با قالب آماده وردپرس. بهترین گزینه برای تیم‌هایی که به حضور آنلاین سریع با کاتالوگ محدود نیاز دارند.</p>
+          <p class="card__body">فروشگاه آنلاین حرفه‌ای در ۲ تا ۳ هفته با قالب آماده وردپرس. بهترین گزینه برای تیم‌هایی که به فروشگاه سریع با تعداد محصولات محدود نیاز دارند.</p>
           <ul class="card__list">
             <li>قالب پریمیوم لایسنس‌دار</li>
             <li>تا ۱۰۰ محصول</li>
@@ -149,7 +149,7 @@
           <div class="card__letter">C</div>
           <h5 class="card__title">کدنویسی سفارشی + CRM</h5>
           <p class="card__subtitle">پلتفرم متصل &middot; ۷,۰۰۰ درهم</p>
-          <p class="card__body">کاتالوگ محصول کاملاً سفارشی با پنل مدیریت، جستجوی پیشرفته، مقایسه محصول و یکپارچه‌سازی دوطرفه CRM.</p>
+          <p class="card__body">فروشگاه آنلاین کاملاً سفارشی با پنل مدیریت، جستجوی پیشرفته، مقایسه محصول و یکپارچه‌سازی دوطرفه CRM.</p>
           <ul class="card__list">
             <li>فرانت‌اند و بک‌اند سفارشی</li>
             <li>تا ۵۰۰ محصول</li>
