--- a/next-steps.html
+++ b/next-steps.html
@@ -54,7 +54,7 @@
                 <td>وب‌سایت سفارشی + یکپارچه‌سازی CRM</td>
                 <td>۳ تا ۴ هفته</td>
                 <td>۷,۰۰۰ درهم</td>
-                <td>نیاز به کاتالوگ حرفه‌ای با مدیریت سرنخ</td></td>
+                <td>نیاز به فروشگاه آنلاین حرفه‌ای با مدیریت سرنخ</td></td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-d)">D</strong></td>
