--- a/package-a.html
+++ b/package-a.html
@@ -23,7 +23,7 @@
         <h1 class="mt-s">وردپرس + قالب آماده</h1>
         <p class="lead">
           حضور وب حرفه‌ای در ۲ تا ۳ هفته با استفاده از قالب آماده وردپرس.
-          سریع‌ترین مسیر برای داشتن کاتالوگ محصول آنلاین.
+          سریع‌ترین مسیر برای داشتن فروشگاه آنلاین.
         </p>
       </div>
 
@@ -40,7 +40,7 @@
         <ul class="scope-list scope-list--included">
           <li>نصب و پیکربندی وردپرس روی هاست ارائه‌شده توسط مشتری</li>
           <li>قالب پریمیوم لایسنس‌دار از ۲ تا ۳ گزینه از پیش بررسی‌شده (مشتری انتخاب می‌کند)</li>
-          <li>صفحه اصلی، درباره ما، تماس، کاتالوگ محصول (دسته‌بندی تک‌سطحی)، فرم استعلام</li>
+          <li>صفحه اصلی، درباره ما، تماس، فروشگاه محصولات (دسته‌بندی تک‌سطحی)، فرم استعلام</li>
           <li>تا ۵ صفحه ایستا</li>
           <li>ورود محصولات: تا ۱۰۰ محصول از داده‌های ارائه‌شده توسط مشتری</li>
           <li>پیکربندی پایه SEO (متا تگ‌ها، نقشه سایت، robots.txt)</li>
@@ -58,7 +58,6 @@
           <li>یکپارچه‌سازی CRM</li>
           <li>اتوماسیون ورود محصول</li>
           <li>پشتیبانی چندزبانه</li>
-          <li>فروشگاه الکترونیکی / پردازش پرداخت</li>
           <li>فیلتر پیشرفته یا ویژگی‌های مقایسه محصول</li>
           <li>ربات تلگرام یا هرگونه اتوماسیون</li>
           <li>به‌روزرسانی مستمر محتوا (به‌جای آن آموزش ارائه می‌شود)</li>
