--- a/package-c.html
+++ b/package-c.html
@@ -21,7 +21,7 @@
         <span class="badge badge--c">پکیج C</span>
         <h1 class="mt-s">وب‌سایت کدنویسی سفارشی + CRM</h1>
         <p class="lead">
-          پلتفرم کاتالوگ محصول کاملاً سفارشی با پنل مدیریت اختصاصی، جستجو و فیلتر پیشرفته،
+          فروشگاه آنلاین کاملاً سفارشی با پنل مدیریت اختصاصی، جستجو و فیلتر پیشرفته،
           مقایسه محصول و یکپارچه‌سازی دوطرفه CRM. ساخته‌شده از پایه، بدون وابستگی به وردپرس.
         </p>
       </div>
@@ -30,7 +30,7 @@
         <h3>این پکیج برای چه کسی مناسب است</h3>
         <p>
           کسب‌وکاری با بیش از ۲۰۰ محصول، داده محصول سازمان‌یافته، CRM موجود یا در برنامه‌ریزی، و تمایل
-          به وب‌سایتی که به‌عنوان پلتفرم واقعی کاتالوگ محصول عمل کند. دارای کارکنان فنی یا فرد مسئول
+          به وب‌سایتی که به‌عنوان فروشگاه آنلاین حرفه‌ای عمل کند. دارای کارکنان فنی یا فرد مسئول
           اختصاصی برای CRM. قصد توسعه محصولات در طول زمان را دارد.
         </p>
       </div>
@@ -40,7 +40,7 @@
         <ul class="scope-list scope-list--included">
           <li>فرانت‌اند سفارشی (بدون وابستگی CMS؛ فریمورک مدرن)</li>
           <li>بک‌اند سفارشی با پنل مدیریت برای مدیریت محصول، دسته‌بندی و محتوا</li>
-          <li>کاتالوگ محصول: دسته‌بندی چندسطحی، فیلتر پیشرفته (مشخصات، برند، دسته‌بندی، موجودی)، جستجوی تمام‌متن</li>
+          <li>فروشگاه محصولات: دسته‌بندی چندسطحی، فیلتر پیشرفته (مشخصات، برند، دسته‌بندی، موجودی)، جستجوی تمام‌متن</li>
           <li>جداول مشخصات محصول (طرح‌واره بر اساس نوع محصول)</li>
           <li>صفحات جزئیات محصول: گالری تصاویر، جدول مشخصات ساختاریافته، محصولات مرتبط، فرم استعلام، لینک PDF دیتاشیت</li>
           <li>رابط مقایسه محصول (انتخاب کاربر، کنار هم، تا ۴ محصول)</li>
@@ -61,7 +61,6 @@
         <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
           <li>یکپارچه‌سازی ربات تلگرام</li>
-          <li>فروشگاه الکترونیکی / پردازش پرداخت</li>
           <li>چندزبانه (قابل افزودن به‌عنوان توسعه)</li>
           <li>ورود خودکار محصول از فیدهای تأمین‌کننده (قابل تعریف به‌عنوان افزودنی)</li>
           <li>اپلیکیشن موبایل</li>
