--- a/package-e.html
+++ b/package-e.html
@@ -31,10 +31,10 @@
       <div class="mt-xl" data-animate>
         <h3>این پکیج برای چه کسی مناسب است</h3>
         <p>
-          کسب‌وکاری که کاتالوگ محصول خود را یک دارایی عملیاتی اصلی می‌داند، نه مکمل بازاریابی.
+          کسب‌وکاری که فروشگاه آنلاین خود را یک دارایی عملیاتی اصلی می‌داند، نه مکمل بازاریابی.
           بیش از ۳۰۰ محصول در حوزه‌های تجهیزات IT، شبکه و دوربین مداربسته دارد. یک سیستم یکپارچه واحد می‌خواهد
           که وب‌سایت، CRM و ابزار مدیریت محصول به‌صورت یکی کار کنند. چندین عضو تیم
-          درگیر جنبه‌های مختلف هستند. برنامه رشد قابل‌توجه کاتالوگ و عملیات فروش دارد.
+          درگیر جنبه‌های مختلف هستند. برنامه رشد قابل‌توجه فروشگاه و عملیات فروش دارد.
         </p>
       </div>
 
@@ -83,7 +83,6 @@
       <div class="mt-l" data-animate>
         <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>فروشگاه الکترونیکی / پردازش پرداخت</li>
           <li>چندزبانه (قابل افزودن)</li>
           <li>ورود خودکار فید تأمین‌کننده (قابل تعریف)</li>
           <li>اپلیکیشن موبایل بومی</li>
@@ -158,13 +157,13 @@
         <h3>چرا پکیج E انتخاب بالغ است</h3>
         <p>
           پکیج E به معنای مطلق «بهترین» پکیج نیست. این انتخاب مناسب برای
-          کسب‌وکاری است که از فرآیندهای دستی فراتر رفته و نیاز دارد کاتالوگ محصول، پایپلاین
+          کسب‌وکاری است که از فرآیندهای دستی فراتر رفته و نیاز دارد فروشگاه آنلاین، پایپلاین
           مشتری و عملیات روزانه‌اش به‌صورت یک سیستم متصل واحد کار کند. سرمایه‌گذاری اولیه
           بالاتر است. ساخت بیشتر طول می‌کشد. اما نتیجه پلتفرمی است که هر روز اصطکاک عملیاتی
           را کاهش می‌دهد — به‌جای وب‌سایتی که کار دستی جدید برای نگهداری ایجاد می‌کند.
         </p>
         <p>
-          اگر کاتالوگ محصول شما دارایی کسب‌وکار شماست، و زمان تیم شما صرف مدیریت
+          اگر فروشگاه آنلاین شما دارایی کسب‌وکار شماست، و زمان تیم شما صرف مدیریت
           محصولات، پیگیری استعلام‌ها و به‌روزرسانی اطلاعات در ابزارهای پراکنده می‌شود،
           پکیج E این قطع‌ارتباط‌ها را در سطح سیستم حذف می‌کند.
         </p>
