--- a/packages.html
+++ b/packages.html
@@ -71,7 +71,7 @@
           <text x="270" y="280" text-anchor="middle" fill="#5B4FA0" font-size="12" font-weight="600" font-family="Vazirmatn">D</text>
           <text x="140" y="280" text-anchor="middle" fill="#1A6B4E" font-size="12" font-weight="600" font-family="Vazirmatn">E</text>
           <text x="660" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">حضور ایستا</text>
-          <text x="530" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">کاتالوگ برنددار</text>
+          <text x="530" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">فروشگاه برنددار</text>
           <text x="400" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">پلتفرم متصل</text>
           <text x="270" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">+مدیریت موبایلی</text>
           <text x="140" y="300" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">اکوسیستم یکپارچه</text>
@@ -88,7 +88,7 @@
           </defs>
           <!-- Descriptive Y-axis labels — moved to LEFT for RTL -->
           <text x="90" y="255" fill="#7A7A78" font-size="9" font-family="Vazirmatn" text-anchor="end">حضور وب ایستا</text>
-          <text x="90" y="210" fill="#7A7A78" font-size="9" font-family="Vazirmatn" text-anchor="end">کاتالوگ تعاملی</text>
+          <text x="90" y="210" fill="#7A7A78" font-size="9" font-family="Vazirmatn" text-anchor="end">فروشگاه تعاملی</text>
           <text x="90" y="120" fill="#7A7A78" font-size="9" font-family="Vazirmatn" text-anchor="end">پلتفرم متصل</text>
           <text x="90" y="75" fill="#7A7A78" font-size="9" font-family="Vazirmatn" text-anchor="end">اکوسیستم یکپارچه</text>
         </svg>
@@ -114,7 +114,7 @@
           <div class="decision-path__result"><a href="package-b.html"><strong>پکیج B</strong></a> را انتخاب کنید. اگر CRM در نقشه راه ۱۲ ماهه شماست، C را هم در نظر بگیرید.</div>
         </div>
         <div class="decision-path">
-          <div class="decision-path__condition">«بیش از ۲۰۰ محصول و CRM دارم. یک کاتالوگ محصول واقعی می‌خواهم.»</div>
+          <div class="decision-path__condition">«بیش از ۲۰۰ محصول و CRM دارم. یک فروشگاه آنلاین واقعی می‌خواهم.»</div>
           <div class="decision-path__result"><a href="package-c.html"><strong>پکیج C</strong></a> را انتخاب کنید. اگر نیاز به مدیریت موبایلی ایجاد شد، پکیج D را بعداً اضافه کنید.</div>
         </div>
         <div class="decision-path">
