--- a/responsibilities.html
+++ b/responsibilities.html
@@ -43,7 +43,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><strong>داده کاتالوگ محصولات</strong></td>
+                <td><strong>داده محصولات فروشگاه</strong></td>
                 <td>لیست کامل محصولات شامل نام، دسته‌بندی، مشخصات فنی و قیمت‌گذاری. به‌صورت فایل اکسل یا فرمت ساختاریافته.</td>
                 <td>مرحله کشف</td>
                 <td>همه پکیج‌ها</td>
