feat: update scope (B+CRM/API, C+CRM config, D+bulk/reports/categories, E+3 langs/CRM customization) and increase prices 25%

--- a/package-b.html
+++ b/package-b.html
@@ -50,6 +50,8 @@
           <li>تا ۱۰ صفحه</li>
           <li>ورود محصولات: تا ۲۰۰ محصول</li>
           <li>بهینه‌سازی پایه عملکرد (فشرده‌سازی تصاویر، افزونه کش)</li>
+          <li>یکپارچه‌سازی CRM (همگام‌سازی استعلام‌ها با CRM)</li>
+          <li>نقاط پایانی API برای سیستم‌های خارجی</li>
           <li>پنجره ۶۰ روزه رفع باگ پس از راه‌اندازی</li>
         </ul>
       </div>
@@ -57,12 +59,10 @@
       <div class="mt-l" data-animate>
         <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>یکپارچه‌سازی CRM</li>
           <li>اتوماسیون ورود محصول یا ابزارهای مدیریت دسته‌جمعی</li>
           <li>ربات تلگرام</li>
           <li>پشتیبانی چندزبانه</li>
           <li>رابط مقایسه محصول (کنار هم)</li>
-          <li>نقاط پایانی API برای سیستم‌های خارجی</li>
           <li>جستجوی پیشرفته (تمام‌متن، تطابق فازی)</li>
           <li>به‌روزرسانی مستمر محتوا فراتر از آموزش</li>
         </ul>
@@ -97,7 +97,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۲–۳</div><div class="stat-item__label">هفته مجموعاً</div></div>
-          <div class="stat-item"><div class="stat-item__value">۵,۵۰۰</div><div class="stat-item__label">درهم</div></div>
+          <div class="stat-item"><div class="stat-item__value">۶,۸۷۵</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
