--- a/package-c.html
+++ b/package-c.html
@@ -53,6 +53,7 @@
           <li>امنیت: اعتبارسنجی ورودی، محدودیت نرخ درخواست، HTTPS، احراز هویت مدیر</li>
           <li>لایه API از نوع RESTful برای تمام داده‌های محصول و استعلام</li>
           <li>تا ۵۰۰ محصول اولیه وارد می‌شود</li>
+          <li>سفارشی‌سازی CRM (پیکربندی جریان‌های کاری و قوانین اتوماسیون CRM)</li>
           <li>پنجره ۹۰ روزه تثبیت پس از راه‌اندازی</li>
         </ul>
       </div>
@@ -64,7 +65,6 @@
           <li>چندزبانه (قابل افزودن به‌عنوان توسعه)</li>
           <li>ورود خودکار محصول از فیدهای تأمین‌کننده (قابل تعریف به‌عنوان افزودنی)</li>
           <li>اپلیکیشن موبایل</li>
-          <li>سفارشی‌سازی CRM (CRM مشتری باید توسط مشتری یا فروشنده CRM پیکربندی شود)</li>
           <li>مدیریت مستمر محتوا (آموزش و پنل مدیریت ارائه می‌شود)</li>
         </ul>
       </div>
@@ -102,7 +102,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">هفته مجموعاً</div></div>
-          <div class="stat-item"><div class="stat-item__value">۷,۰۰۰</div><div class="stat-item__label">درهم</div></div>
+          <div class="stat-item"><div class="stat-item__value">۸,۷۵۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
