--- a/package-d.html
+++ b/package-d.html
@@ -51,16 +51,16 @@
           <li>محدودیت نرخ درخواست و اعتبارسنجی ورودی</li>
           <li>مدیریت خطا با پیام‌های بازخورد واضح</li>
           <li>مستندات: مرجع دستورات ربات و راهنمای استفاده</li>
+          <li>عملیات دسته‌جمعی (ورود/خروج انبوه محصولات)</li>
+          <li>تحلیل و گزارش‌دهی از طریق ربات</li>
+          <li>مدیریت دسته‌بندی (ایجاد/بازساختاردهی دسته‌بندی‌ها از طریق ربات)</li>
+          <li>جایگزینی کامل پنل مدیریت (ربات تمام عملیات مدیریتی را پوشش می‌دهد)</li>
         </ul>
       </div>
 
       <div class="mt-l" data-animate>
         <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>جایگزینی کامل پنل مدیریت (ربات فقط عملیات رایج را مدیریت می‌کند)</li>
-          <li>مدیریت دسته‌بندی (ایجاد/بازساختاردهی دسته‌بندی‌ها همچنان از طریق پنل مدیریت)</li>
-          <li>عملیات دسته‌جمعی (ورود/خروج انبوه)</li>
-          <li>تحلیل یا گزارش‌دهی از طریق ربات</li>
           <li>مدیریت CRM از طریق ربات (ربات فقط با دیتابیس محصول تعامل دارد)</li>
           <li>راه‌اندازی چند-ربات (یک نمونه ربات)</li>
           <li>پردازش زبان طبیعی (ربات از جریان دستوری ساختاریافته استفاده می‌کند، نه هوش مصنوعی متن آزاد)</li>
@@ -141,7 +141,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">+۱</div><div class="stat-item__label">هفته (افزونه برای C/E)</div></div>
-          <div class="stat-item"><div class="stat-item__value">۳,۵۰۰</div><div class="stat-item__label">درهم</div></div>
+          <div class="stat-item"><div class="stat-item__value">۴,۳۷۵</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
