--- a/package-e.html
+++ b/package-e.html
@@ -44,6 +44,8 @@
         <ul class="scope-list scope-list--included">
           <li>تمام ویژگی‌های پکیج C (وب‌سایت سفارشی، پنل مدیریت، API، یکپارچه‌سازی CRM)</li>
           <li>تمام ویژگی‌های پکیج D (ربات تلگرام برای مدیریت محصول)</li>
+          <li>پشتیبانی ۳ زبانه (چندزبانه)</li>
+          <li>سفارشی‌سازی داخلی CRM (جریان‌های کاری، قوانین اتوماسیون درون CRM)</li>
         </ul>
 
         <h5 class="mt-m">یکپارچه‌سازی عمیق CRM</h5>
@@ -83,10 +85,8 @@
       <div class="mt-l" data-animate>
         <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>چندزبانه (قابل افزودن)</li>
           <li>ورود خودکار فید تأمین‌کننده (قابل تعریف)</li>
           <li>اپلیکیشن موبایل بومی</li>
-          <li>سفارشی‌سازی داخلی CRM (جریان‌های کاری، قوانین اتوماسیون درون CRM)</li>
           <li>پیشنهاد محصول مبتنی بر هوش مصنوعی</li>
           <li>یکپارچه‌سازی چت فراتر از تلگرام</li>
         </ul>
@@ -127,7 +127,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۴–۵</div><div class="stat-item__label">هفته مجموعاً</div></div>
-          <div class="stat-item"><div class="stat-item__value">۹,۰۰۰</div><div class="stat-item__label">درهم</div></div>
+          <div class="stat-item"><div class="stat-item__value">۱۱,۲۵۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
