style: replace هفته with W across all pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="card__letter">A</div>
           <h5 class="card__title">وردپرس + قالب آماده</h5>
           <p class="card__subtitle">استقرار سریع &middot; ۴,۳۷۵ درهم</p>
-          <p class="card__body">فروشگاه آنلاین حرفه‌ای در ۲ تا ۳ هفته با قالب آماده وردپرس. بهترین گزینه برای تیم‌هایی که به فروشگاه سریع با تعداد محصولات محدود نیاز دارند.</p>
+          <p class="card__body">فروشگاه آنلاین حرفه‌ای در ۲ تا ۳ W با قالب آماده وردپرس. بهترین گزینه برای تیم‌هایی که به فروشگاه سریع با تعداد محصولات محدود نیاز دارند.</p>
           <ul class="card__list">
             <li>قالب پریمیوم لایسنس‌دار</li>
             <li>تا ۱۰۰ محصول</li>
