--- a/next-steps.html
+++ b/next-steps.html
@@ -38,35 +38,35 @@
               <tr>
                 <td><strong style="color:var(--color-pkg-a)">A</strong></td>
                 <td>سایت وردپرسی با قالب آماده</td>
-                <td>۲ تا ۳ هفته</td>
+                <td>۲ تا ۳ W</td>
                 <td>۴,۳۷۵ درهم</td>
                 <td>نیاز سریع به حضور آنلاین، بودجه محدود</td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-b)">B</strong></td>
                 <td>سایت وردپرسی با طراحی سفارشی</td>
-                <td>۲ تا ۳ هفته</td>
+                <td>۲ تا ۳ W</td>
                 <td>۶,۸۷۵ درهم</td>
                 <td>نیاز به تمایز برند، آمادگی سرمایه‌گذاری در طراحی</td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-c)">C</strong></td>
                 <td>وب‌سایت سفارشی + یکپارچه‌سازی CRM</td>
-                <td>۳ تا ۴ هفته</td>
+                <td>۳ تا ۴ W</td>
                 <td>۸,۷۵۰ درهم</td>
                 <td>نیاز به فروشگاه آنلاین حرفه‌ای با مدیریت سرنخ</td></td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-d)">D</strong></td>
                 <td>ربات تلگرام (افزونه C یا E)</td>
-                <td>+ ۱ هفته</td>
+                <td>+ ۱ W</td>
                 <td>۴,۳۷۵ درهم</td>
                 <td>تیم فروش محصولات را از موبایل مدیریت کند</td></td>
               </tr>
               <tr style="background:var(--color-pkg-e-light);">
                 <td><strong style="color:var(--color-pkg-e)">E</strong></td>
                 <td>اکوسیستم کامل: وب‌سایت + CRM + ربات + داشبورد</td>
-                <td>۴ تا ۵ هفته</td>
+                <td>۴ تا ۵ W</td>
                 <td>۱۱,۲۵۰ درهم</td>
                 <td>ساخت برای مقیاس، عملیات یکپارچه، بلندمدت</td></td>
               </tr>
@@ -87,8 +87,8 @@
               <span class="accordion__icon"><svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg></span>
             </button>
             <div class="accordion__content">
-              <p>اگر باید ظرف ۲ هفته آنلاین شوید، فقط پکیج A مناسب است. اگر ۲ تا ۳ هفته وقت دارید،
-              B عملی می‌شود. برای C یا E، ۴ تا ۵ هفته شامل مراحل طراحی و تست برنامه‌ریزی کنید.</p>
+              <p>اگر باید ظرف ۲ W آنلاین شوید، فقط پکیج A مناسب است. اگر ۲ تا ۳ W وقت دارید،
+              B عملی می‌شود. برای C یا E، ۴ تا ۵ W شامل مراحل طراحی و تست برنامه‌ریزی کنید.</p>
               <p>زمان‌بندی فقط به سرعت توسعه بستگی ندارد — به سرعت ارائه داده محصول، تصاویر
               و تأییدیه‌ها توسط تیم شما در هر نقطه بازرسی نیز وابسته است.</p>
             </div>
