--- a/package-a.html
+++ b/package-a.html
@@ -22,7 +22,7 @@
         <span class="badge badge--a">پکیج A</span>
         <h1 class="mt-s">وردپرس + قالب آماده</h1>
         <p class="lead">
-          حضور وب حرفه‌ای در ۲ تا ۳ هفته با استفاده از قالب آماده وردپرس.
+          حضور وب حرفه‌ای در ۲ تا ۳ W با استفاده از قالب آماده وردپرس.
           سریع‌ترین مسیر برای داشتن فروشگاه آنلاین.
         </p>
       </div>
@@ -72,7 +72,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">سرعت: آنلاین در ۱ تا ۲ هفته</td><td class="accept">تمایز بصری محدود از سایر سایت‌های با همان قالب</td></tr>
+              <tr><td class="gain">سرعت: آنلاین در ۱ تا ۲ W</td><td class="accept">تمایز بصری محدود از سایر سایت‌های با همان قالب</td></tr>
               <tr><td class="gain">هزینه اولیه پایین</td><td class="accept">وابستگی به به‌روزرسانی قالب؛ سازنده قالب آینده ویژگی‌ها را کنترل می‌کند</td></tr>
               <tr><td class="gain">پنل مدیریت آشنای وردپرس</td><td class="accept">ورود و به‌روزرسانی دستی محصولات</td></tr>
               <tr><td class="gain">اکوسیستم بزرگ افزونه‌ها</td><td class="accept">تداخل افزونه‌ها و سربار نگهداری</td></tr>
@@ -94,7 +94,7 @@
         <div class="stat-row mt-m">
           <div class="stat-item">
             <div class="stat-item__value">۲–۳</div>
-            <div class="stat-item__label">هفته مجموعاً</div>
+            <div class="stat-item__label">W مجموعاً</div>
           </div>
           <div class="stat-item">
             <div class="stat-item__value">۴,۳۷۵</div>
