--- a/package-b.html
+++ b/package-b.html
@@ -74,7 +74,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">طراحی برنددار منحصربه‌فرد</td><td class="accept">چرخه طراحی/ساخت طولانی‌تر (۲ تا ۳ هفته)</td></tr>
+              <tr><td class="gain">طراحی برنددار منحصربه‌فرد</td><td class="accept">چرخه طراحی/ساخت طولانی‌تر (۲ تا ۳ W)</td></tr>
               <tr><td class="gain">کنترل بر هویت بصری</td><td class="accept">هزینه اولیه بالاتر از A</td></tr>
               <tr><td class="gain">مرور بهتر محصول (فیلتر، دسته‌بندی)</td><td class="accept">همچنان مدیریت دستی محصول</td></tr>
               <tr><td class="gain">بدون وابستگی به سازنده قالب</td><td class="accept">قالب سفارشی برای تغییرات ساختاری نیاز به توسعه‌دهنده دارد</td></tr>
@@ -96,7 +96,7 @@
           <li><span class="phase-name">راه‌اندازی</span><br><span class="phase-duration">۱ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۲–۳</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۲–۳</div><div class="stat-item__label">W مجموعاً</div></div>
           <div class="stat-item"><div class="stat-item__value">۶,۸۷۵</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
