--- a/package-c.html
+++ b/package-c.html
@@ -75,7 +75,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">کنترل کامل بر هر ویژگی و المان طراحی</td><td class="accept">چرخه ساخت طولانی‌تر (۳ تا ۴ هفته)</td></tr>
+              <tr><td class="gain">کنترل کامل بر هر ویژگی و المان طراحی</td><td class="accept">چرخه ساخت طولانی‌تر (۳ تا ۴ W)</td></tr>
               <tr><td class="gain">بدون زنجیره وابستگی وردپرس/افزونه</td><td class="accept">سرمایه‌گذاری اولیه بالاتر</td></tr>
               <tr><td class="gain">یکپارچه‌سازی CRM جریان کاری متصل ایجاد می‌کند</td><td class="accept">CRM باید انتخاب و پیکربندی شود (پیش‌نیاز)</td></tr>
               <tr><td class="gain">لایه API یکپارچه‌سازی‌های آینده را ممکن می‌سازد</td><td class="accept">برای تغییرات ساختاری نیاز به توسعه‌دهنده دارد</td></tr>
@@ -101,7 +101,7 @@
           <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۲ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">W مجموعاً</div></div>
           <div class="stat-item"><div class="stat-item__value">۸,۷۵۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
