--- a/package-d.html
+++ b/package-d.html
@@ -140,7 +140,7 @@
           <li><span class="phase-name">مستندسازی و آموزش</span><br><span class="phase-duration">نیم روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">+۱</div><div class="stat-item__label">هفته (افزونه برای C/E)</div></div>
+          <div class="stat-item"><div class="stat-item__value">+۱</div><div class="stat-item__label">W (افزونه برای C/E)</div></div>
           <div class="stat-item"><div class="stat-item__value">۴,۳۷۵</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
