--- a/package-e.html
+++ b/package-e.html
@@ -98,7 +98,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">اکوسیستم کاملاً یکپارچه: یک ورود داده، همه‌جا به‌روز</td><td class="accept">طولانی‌ترین چرخه ساخت (۴ تا ۵ هفته)</td></tr>
+              <tr><td class="gain">اکوسیستم کاملاً یکپارچه: یک ورود داده، همه‌جا به‌روز</td><td class="accept">طولانی‌ترین چرخه ساخت (۴ تا ۵ W)</td></tr>
               <tr><td class="gain">بلوغ عملیاتی: ردیابی استعلام، پیگیری، تحلیل</td><td class="accept">بالاترین سرمایه‌گذاری اولیه</td></tr>
               <tr><td class="gain">مدیریت محصول موبایلی از طریق تلگرام</td><td class="accept">پیچیدگی سیستم نیاز به فرآیندهای مستند و مدیر اختصاصی دارد</td></tr>
               <tr><td class="gain">پایپلاین استعلام متصل به CRM</td><td class="accept">انتخاب و پیکربندی CRM یک پیش‌نیاز است</td></tr>
@@ -126,7 +126,7 @@
           <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۳ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۴–۵</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۴–۵</div><div class="stat-item__label">W مجموعاً</div></div>
           <div class="stat-item"><div class="stat-item__value">۱۱,۲۵۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
