--- a/responsibilities.html
+++ b/responsibilities.html
@@ -160,7 +160,7 @@
             <div class="phase-timeline__content">
               <h4>تأیید راه‌اندازی</h4>
               <p class="caption">تأیید نهایی محیط آزمایشی. تغییر DNS فقط پس از تأیید کتبی انجام می‌شود.
-              نظارت پس از راه‌اندازی به مدت ۱ هفته با پشتیبانی اولویت‌دار.</p>
+              نظارت پس از راه‌اندازی به مدت ۱ W با پشتیبانی اولویت‌دار.</p>
               <p class="caption"><strong>تأییدکننده:</strong> مالک / مدیرعامل</p>
             </div>
           </div>
@@ -225,7 +225,7 @@
               <tr>
                 <td><strong>دامنه بزرگ</strong></td>
                 <td>اضافه کردن یکپارچه‌سازی جدید، تغییر فروشنده CRM، اضافه کردن پشتیبانی چندزبانه</td>
-                <td>۱ تا ۴ هفته+</td>
+                <td>۱ تا ۴ W+</td>
                 <td>اصلاحیه رسمی دامنه. برآورد زمان‌بندی و هزینه بازنگری‌شده. نیاز به تأیید مالک/مدیرعامل.</td>
               </tr>
               <tr>
