--- a/timeline.html
+++ b/timeline.html
@@ -184,11 +184,11 @@
           <!-- Summary row -->
           <rect x="0" y="480" width="900" height="40" fill="#FAFAF8"/>
           <text x="845" y="505" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="600" font-family="Vazirmatn">مجموع</text>
-          <text x="720" y="505" text-anchor="middle" fill="#6B7280" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ هفته</text>
-          <text x="640" y="505" text-anchor="middle" fill="#7C6E56" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ هفته</text>
-          <text x="600" y="505" text-anchor="middle" fill="#2C5282" font-size="9" font-weight="600" font-family="Vazirmatn">۳-۴ هفته</text>
-          <text x="670" y="505" text-anchor="middle" fill="#5B4FA0" font-size="9" font-weight="600" font-family="Vazirmatn">+۱ هفته</text>
-          <text x="400" y="505" text-anchor="middle" fill="#1A6B4E" font-size="9" font-weight="600" font-family="Vazirmatn">۴-۵ هفته</text>
+          <text x="720" y="505" text-anchor="middle" fill="#6B7280" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ W</text>
+          <text x="640" y="505" text-anchor="middle" fill="#7C6E56" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ W</text>
+          <text x="600" y="505" text-anchor="middle" fill="#2C5282" font-size="9" font-weight="600" font-family="Vazirmatn">۳-۴ W</text>
+          <text x="670" y="505" text-anchor="middle" fill="#5B4FA0" font-size="9" font-weight="600" font-family="Vazirmatn">+۱ W</text>
+          <text x="400" y="505" text-anchor="middle" fill="#1A6B4E" font-size="9" font-weight="600" font-family="Vazirmatn">۴-۵ W</text>
         </svg>
       </div>
 
@@ -216,7 +216,7 @@
         </div>
         <div class="card">
           <h4>راه‌اندازی</h4>
-          <p class="caption">استقرار استیجینگ، تأیید مشتری، تغییر DNS، ارائه SSL، دوره نظارت پس از راه‌اندازی (۱ هفته).</p>
+          <p class="caption">استقرار استیجینگ، تأیید مشتری، تغییر DNS، ارائه SSL، دوره نظارت پس از راه‌اندازی (۱ W).</p>
         </div>
       </div>
 
