--- a/compare.html
+++ b/compare.html
@@ -103,7 +103,7 @@
             <tr class="group-header" data-group="delivery">
               <td colspan="6"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="transition:transform 0.2s"><polyline points="6 9 12 15 18 9"/></svg> تحویل</td>
             </tr>
-            <tr class="group-row" data-group="delivery"><td>زمان‌بندی</td><td class="col-a">۲–۳ هفته</td><td class="col-b">۲–۳ هفته</td><td class="col-c">۳–۴ هفته</td><td class="col-d">+۱ هفته</td><td class="col-e">۴–۵ هفته</td></tr>
+            <tr class="group-row" data-group="delivery"><td>زمان‌بندی</td><td class="col-a">۲–۳ W</td><td class="col-b">۲–۳ W</td><td class="col-c">۳–۴ W</td><td class="col-d">+۱ W</td><td class="col-e">۴–۵ W</td></tr>
             <tr class="group-row" data-group="delivery"><td>قیمت (درهم)</td><td class="col-a">۴,۳۷۵</td><td class="col-b">۶,۸۷۵</td><td class="col-c">۸,۷۵۰</td><td class="col-d">۴,۳۷۵</td><td class="col-e">۱۱,۲۵۰</td></tr>
             <tr class="group-row" data-group="delivery"><td>فازهای طراحی</td><td class="col-a">۰</td><td class="col-b">۳</td><td class="col-c">۳</td><td class="col-d">۱</td><td class="col-e">۳</td></tr>
             <tr class="group-row" data-group="delivery"><td>مشارکت مشتری</td><td class="col-a">کم</td><td class="col-b">متوسط</td><td class="col-c">متوسط-بالا</td><td class="col-d">کم</td><td class="col-e">بالا</td></tr>
@@ -194,7 +194,7 @@
       <div class="chart-container mt-l" data-animate>
         <div class="chart-container__title">تلاش در مقابل قابلیت</div>
         <div class="chart-container__purpose">
-          محور X: تلاش تخمینی پیاده‌سازی (نفر-هفته). محور Y: قابلیت ارائه‌شده (تعداد
+          محور X: تلاش تخمینی پیاده‌سازی (نفر-W). محور Y: قابلیت ارائه‌شده (تعداد
           بلوک‌های قابلیت یکپارچه). آستانه ربع‌ها در نقطه میانی بازه داده تنظیم شده.
         </div>
         <svg class="chart-svg" viewBox="0 0 800 440" id="effort-chart">
@@ -210,23 +210,23 @@
           <text x="240" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">بیش‌مهندسی‌شده</text>
           <text x="570" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">حداقل قابل‌قبول</text>
 
-          <text x="430" y="420" text-anchor="middle" fill="#4A4A48" font-size="11" font-family="Vazirmatn" font-weight="600">تلاش پیاده‌سازی (نفر-هفته) &larr;</text>
+          <text x="430" y="420" text-anchor="middle" fill="#4A4A48" font-size="11" font-family="Vazirmatn" font-weight="600">تلاش پیاده‌سازی (نفر-W) &larr;</text>
           <text x="50" y="200" text-anchor="middle" fill="#4A4A48" font-size="11" font-family="Vazirmatn" font-weight="600" transform="rotate(-90 50 200)">قابلیت ارائه‌شده &uarr;</text>
 
           <!-- A: cx 160→640 -->
           <circle cx="640" cy="340" r="20" fill="#6B7280" opacity="0.2" stroke="#6B7280" stroke-width="2"/>
           <text x="640" y="344" text-anchor="middle" fill="#6B7280" font-size="14" font-weight="700" font-family="Vazirmatn">A</text>
-          <text x="640" y="310" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۱ بلوک</text>
+          <text x="640" y="310" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ W / ۱ بلوک</text>
 
           <!-- B: cx 240→560 -->
           <circle cx="560" cy="280" r="20" fill="#7C6E56" opacity="0.2" stroke="#7C6E56" stroke-width="2"/>
           <text x="560" y="284" text-anchor="middle" fill="#7C6E56" font-size="14" font-weight="700" font-family="Vazirmatn">B</text>
-          <text x="560" y="250" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۲ بلوک</text>
+          <text x="560" y="250" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ W / ۲ بلوک</text>
 
           <!-- C: cx 480→320 -->
           <circle cx="320" cy="120" r="22" fill="#2C5282" opacity="0.2" stroke="#2C5282" stroke-width="2"/>
           <text x="320" y="124" text-anchor="middle" fill="#2C5282" font-size="14" font-weight="700" font-family="Vazirmatn">C</text>
-          <text x="320" y="90" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۴ بلوک</text>
+          <text x="320" y="90" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ W / ۴ بلوک</text>
 
           <!-- D: cx 175→625 -->
           <circle cx="625" cy="300" r="16" fill="#5B4FA0" opacity="0.2" stroke="#5B4FA0" stroke-width="2" stroke-dasharray="4 3"/>
@@ -236,7 +236,7 @@
           <!-- E: cx 640→160 -->
           <circle cx="160" cy="60" r="26" fill="#1A6B4E" opacity="0.2" stroke="#1A6B4E" stroke-width="2.5"/>
           <text x="160" y="64" text-anchor="middle" fill="#1A6B4E" font-size="16" font-weight="700" font-family="Vazirmatn">E</text>
-          <text x="160" y="32" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۵ هفته / ۶ بلوک</text>
+          <text x="160" y="32" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۵ W / ۶ بلوک</text>
         </svg>
         <div class="chart-container__takeaway">
           <strong>نکته کلیدی:</strong> هیچ پکیجی در ناحیه «بیش‌مهندسی‌شده» قرار نمی‌گیرد. A و B شروع سریع با
