--- a/packages.html
+++ b/packages.html
@@ -110,7 +110,7 @@
           <div class="decision-path__result">با <a href="package-a.html"><strong>پکیج A</strong></a> شروع کنید. پس از ۶ تا ۱۲ ماه بازبینی کنید.</div>
         </div>
         <div class="decision-path">
-          <div class="decision-path__condition">«به یک وب‌سایت حرفه‌ای با هویت برند نیاز دارم. می‌توانم ۲ تا ۳ هفته صبر کنم.»</div>
+          <div class="decision-path__condition">«به یک وب‌سایت حرفه‌ای با هویت برند نیاز دارم. می‌توانم ۲ تا ۳ W صبر کنم.»</div>
           <div class="decision-path__result"><a href="package-b.html"><strong>پکیج B</strong></a> را انتخاب کنید. اگر CRM در نقشه راه ۱۲ ماهه شماست، C را هم در نظر بگیرید.</div>
         </div>
         <div class="decision-path">
@@ -132,31 +132,31 @@
         <a href="package-a.html" class="card card--pkg card--pkg-a" style="text-decoration:none;">
           <div class="card__letter">A</div>
           <h5 class="card__title">وردپرس + قالب آماده</h5>
-          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۱۰۰ محصول &middot; ۴,۳۷۵ درهم</p>
+          <p class="card__subtitle">۲ تا ۳ W &middot; تا ۱۰۰ محصول &middot; ۴,۳۷۵ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-b.html" class="card card--pkg card--pkg-b" style="text-decoration:none;">
           <div class="card__letter">B</div>
           <h5 class="card__title">وردپرس + رابط سفارشی</h5>
-          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۲۰۰ محصول &middot; ۶,۸۷۵ درهم</p>
+          <p class="card__subtitle">۲ تا ۳ W &middot; تا ۲۰۰ محصول &middot; ۶,۸۷۵ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-c.html" class="card card--pkg card--pkg-c" style="text-decoration:none;">
           <div class="card__letter">C</div>
           <h5 class="card__title">کدنویسی سفارشی + CRM</h5>
-          <p class="card__subtitle">۳ تا ۴ هفته &middot; تا ۵۰۰ محصول &middot; ۸,۷۵۰ درهم</p>
+          <p class="card__subtitle">۳ تا ۴ W &middot; تا ۵۰۰ محصول &middot; ۸,۷۵۰ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-d.html" class="card card--pkg card--pkg-d" style="text-decoration:none;">
           <div class="card__letter">D</div>
           <h5 class="card__title">ربات تلگرام</h5>
-          <p class="card__subtitle">+ ۱ هفته &middot; افزونه برای C/E &middot; ۴,۳۷۵ درهم</p>
+          <p class="card__subtitle">+ ۱ W &middot; افزونه برای C/E &middot; ۴,۳۷۵ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-e.html" class="card card--pkg card--pkg-e card--highlight" style="text-decoration:none;">
           <div class="card__letter">E</div>
           <h5 class="card__title">اکوسیستم کامل</h5>
-          <p class="card__subtitle">۴ تا ۵ هفته &middot; تا ۱۰۰۰ محصول &middot; ۱۱,۲۵۰ درهم</p>
+          <p class="card__subtitle">۴ تا ۵ W &middot; تا ۱۰۰۰ محصول &middot; ۱۱,۲۵۰ درهم</p>
           <div class="card__footer"><span class="btn btn--primary" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
       </div>
