fix: replace week labels (ه۱-ه۷) with 1W-7W in timeline.html

--- a/timeline.html
+++ b/timeline.html
@@ -47,13 +47,13 @@
           <line x1="890" y1="30" x2="890" y2="500" stroke="#E0DFDC" stroke-width="0.5"/>
 
           <!-- Week labels — RTL -->
-          <text x="790" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۱</text>
-          <text x="690" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۲</text>
-          <text x="590" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۳</text>
-          <text x="490" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۴</text>
-          <text x="390" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۵</text>
-          <text x="290" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۶</text>
-          <text x="190" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">ه۷</text>
+          <text x="790" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">1W</text>
+          <text x="690" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">2W</text>
+          <text x="590" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">3W</text>
+          <text x="490" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">4W</text>
+          <text x="390" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">5W</text>
+          <text x="290" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">6W</text>
+          <text x="190" y="22" text-anchor="middle" fill="#7A7A78" font-size="9">7W</text>
 
           <!-- === PACKAGE A LANE === (2-3 weeks, bars flow right-to-left) -->
           <rect x="0" y="30" width="900" height="70" fill="#F5F4F0" rx="0"/>
@@ -237,13 +237,13 @@
               </tr>
             </thead>
             <tbody>
-              <tr><td>تأیید نیازمندی‌ها</td><td>ه۱</td><td>ه۱</td><td>ه۱</td><td>ه۱</td></tr>
-              <tr><td>تأیید طراحی</td><td>ندارد</td><td>ه۱</td><td>ه۱</td><td>ه۱</td></tr>
-              <tr><td>بازبینی آلفا (ویژگی‌های اصلی)</td><td>ندارد</td><td>ه۲</td><td>ه۲</td><td>ه۳</td></tr>
-              <tr><td>تأیید محتوا</td><td>ه۲</td><td>ه۲</td><td>ه۳</td><td>ه۳</td></tr>
-              <tr><td>تأیید یکپارچه‌سازی CRM</td><td>ندارد</td><td>ندارد</td><td>ه۳</td><td>ه۴</td></tr>
-              <tr><td>تأیید استیجینگ</td><td>ه۲</td><td>ه۳</td><td>ه۴</td><td>ه۴</td></tr>
-              <tr><td>تأیید راه‌اندازی</td><td>ه۳</td><td>ه۳</td><td>ه۴</td><td>ه۵</td></tr>
+              <tr><td>تأیید نیازمندی‌ها</td><td>1W</td><td>1W</td><td>1W</td><td>1W</td></tr>
+              <tr><td>تأیید طراحی</td><td>ندارد</td><td>1W</td><td>1W</td><td>1W</td></tr>
+              <tr><td>بازبینی آلفا (ویژگی‌های اصلی)</td><td>ندارد</td><td>2W</td><td>2W</td><td>3W</td></tr>
+              <tr><td>تأیید محتوا</td><td>2W</td><td>2W</td><td>3W</td><td>3W</td></tr>
+              <tr><td>تأیید یکپارچه‌سازی CRM</td><td>ندارد</td><td>ندارد</td><td>3W</td><td>4W</td></tr>
+              <tr><td>تأیید استیجینگ</td><td>2W</td><td>3W</td><td>4W</td><td>4W</td></tr>
+              <tr><td>تأیید راه‌اندازی</td><td>3W</td><td>3W</td><td>4W</td><td>5W</td></tr>
             </tbody>
           </table>
         </div>
